# tollama

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md  check_daemon_config.py  docker-compose.yml  pyproject.toml  reproduce_timeout.py  reproduce_timeout_isolated.py  roadmap.md  test_hf_e2e_run.sh  todo-list.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  e2e-realdata.yml  macos-app.yml  publish.yml
artifacts/benchmarks/cross_model/: result.json  result.md
benchmarks/: cross_model_tsfm.py  tollama_vs_raw.py
benchmarks/reports/cross_model_baseline/: report_template.json  report_template.md
benchmarks/reports/cross_model_refresh_latest/: result.json  result.md
data/csv/: huggingface-time-series-datasets.md  time series CSV data.md
docs/: a2a-integration.md  agent-tools.md  api-reference.md  architecture.md  benchmarking.md  cli-cheatsheet.md  concrete-solution.md  core-artifact-bundle-v1.md  core-workflow.md  covariates.md  dashboard-user-guide.md  how-to-run.md  lag-llama-patchtst-e2e-checklist.md  macos-app.md  models.md  ollama-workflow-parity.md  openapi.json  openclaw-gateway-runbook.md  openclaw-sandbox-runbook.md  preprocessing.md  public-release-checklist.md  testing.md  tollama-implementation-mapping.md  tollama-onepage-en.md  tollama-onepage.md  tollama-review.md  troubleshooting.md  tsfm-routing-defaults.md
docs/adr/: 0000-template.md  0001-stdio-runner-protocol.md  0002-pydantic-v2-strict-schemas.md  0003-connector-plugin-architecture.md
docs/internal/: README.md  dashboard-v1.md  roadmap.md  sprint-next-week.md  todo-list.md
docs/releases/: v0.1.0.md  v0.2.1-readiness.md
examples/: agent_demo.ipynb  benchmark_data.json  chronos2_request.json  core_concrete_solution_demo.sh  core_solution_hourly_input.json  core_workflow_demo.sh  granite_ttm_request.json  lag_llama_request.json  moirai_2p0_request.json  moirai_request.json  quickstart.ipynb  request.json  sundial_request.json  timesfm_2p5_request.json  toto_request.json  tutorial_auto_forecast.ipynb  tutorial_comparison.ipynb  tutorial_covariates.ipynb  tutorial_what_if.ipynb
examples/core_solution_expected_output/: README.md  leaderboard.csv  result.json  routing.json  summary.md
model-registry/: registry.yaml
packaging/macos/: README.md  build_dmg.sh  build_pkg.sh  build_release_artifacts.sh  common.sh  prepare_runtime_assets.sh
scripts/: e2e_all_families.sh  e2e_lag_llama_patchtst_check.sh  e2e_moirai_test.sh  e2e_realdata_hf.sh  e2e_realdata_runtime_diag.sh  e2e_realdata_tsfm.sh  e2e_skills_test.sh  e2e_sundial_test.sh  e2e_timesfm_test.sh  e2e_torch_test.sh  e2e_toto_test.sh  e2e_uni2ts_test.sh  export_openapi.py  install_mcp.sh  run_all_models_e2e_local.sh  validate_openclaw_skill_tollama_forecast.sh  verify_daemon_api.sh
scripts/e2e_realdata/: __init__.py  benchmark_report.py  collect_random_hf_timeseries.py  collect_random_hf_timeseries_rest.py  compute_metrics.py  dataset_catalog.yaml  export_core_solution_input.py  gather_hf_datasets.py  gather_hf_log.txt  hf_dataset_catalog.yaml  hf_dataset_catalog_starter.yaml  hf_dataset_rejections.json  import_hf_data_bundle.py  model_policy.py  payload_builder.py  pick_random_datasets.py  prepare_data.py  resolve_runner_extra.py  run_tsfm_realdata.py  summarize_report.py  test_hf_parser.py  validate_results.py
skills/tollama-forecast/: SKILL.md  openai-tools.json
skills/tollama-forecast/examples/: covariates_forecast.json  metrics_forecast.json  multi_series.json  simple_forecast.json
src/tollama/: __init__.py  sdk.py
src/tollama/a2a/: __init__.py  agent_card.py  client.py  message_router.py  server.py  tasks.py
src/tollama/cli/: __init__.py  client.py  dev.py  info.py  main.py
src/tollama/client/: __init__.py  exceptions.py  http.py
src/tollama/connectors/: __init__.py  base.py  influxdb.py  kafka.py  postgresql.py  registry.py  s3.py
src/tollama/core/: __init__.py  auto_select.py  backtest.py  benchmark.py  config.py  conformal.py  counterfactual.py  decision_explainability.py  decision_schemas.py  ensemble.py  env.py  env_override.py  errors.py  explainability.py  export.py  forecast_metrics.py  hardware_check.py  hf_pull.py  ingest.py  modelfile.py  narratives.py  pipeline.py  progressive.py  protocol.py  pull_defaults.py  quantization.py  recommend.py  reconciliation.py  redact.py  registry.py  report.py  routing.py  runtime_bootstrap.py  scenario_tree.py  scenarios.py  schemas.py  series_analysis.py  storage.py  synthetic.py
src/tollama/daemon/: __init__.py  app.py  audit.py  auth.py  covariates.py  dashboard_api.py  loaded_models.py  logging_config.py  main.py  memory_manager.py  metering.py  metrics.py  (+7 more)
tests/: conftest.py  test_a2a_agent_card.py  test_a2a_client.py  test_a2a_server.py  test_a2a_tasks.py  test_agent_wrappers.py  test_auth.py  test_auto_forecast.py  test_benchmark_tollama_vs_raw.py  test_checked_in_core_solution_expected_output.py  test_checked_in_core_solution_input.py  test_chronos_adapter.py  test_chronos_integration.py  test_cli.py  test_cli_config.py  test_cli_dev.py  test_cli_info.py  test_cli_runtime.py  test_cli_xai.py  test_client_http.py  test_compare.py  test_concrete_solution_demo_script.py  test_config.py  test_conformal.py  test_connectors.py  test_core_benchmark_artifacts.py  test_core_demo_script.py  test_counterfactual.py  test_covariates.py  test_cross_model_benchmark.py  test_daemon_api.py  test_daemon_health.py  test_daemon_main.py  test_daemon_metrics.py  test_dashboard_api.py  test_e2e_realdata_benchmark_report.py  test_e2e_realdata_export_core_solution_input.py  test_e2e_realdata_hf_catalog.py  test_e2e_realdata_model_policy.py  test_e2e_realdata_payload_builder.py  (+97 more)
tests/architecture/: test_boundaries.py
tests/contract/: test_protocol_contract.py
tests/property/: test_protocol_properties.py  test_schema_properties.py
(+167 files in other folders)
