[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tollama"
version = "0.1.0"
description = "Lightweight foundation for the tollama project."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "tollama contributors" }]
keywords = ["forecasting", "time-series", "tsfm", "ollama", "fastapi"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "fastapi>=0.111.0,<1.0.0",
  "huggingface_hub>=0.20,<1.0",
  "httpx>=0.27.0,<1.0.0",
  "pandas>=2.0,<3.0",
  "pydantic>=2.0,<3.0",
  "python-multipart>=0.0.9,<1.0",
  "pyyaml>=6.0,<7.0",
  "tqdm>=4.60,<5.0",
  "typer>=0.12.0,<1.0.0",
  "uvicorn>=0.30.0,<1.0.0",
]

[project.urls]
Homepage = "https://github.com/yongchoelchoi/tollama"
Repository = "https://github.com/yongchoelchoi/tollama"
Issues = "https://github.com/yongchoelchoi/tollama/issues"
Documentation = "https://github.com/yongchoelchoi/tollama/blob/main/README.md"

[project.scripts]
tollama = "tollama.cli.main:main"
tollamad = "tollama.daemon.main:main"
tollama-runner-mock = "tollama.runners.mock.main:main"
tollama-runner-torch = "tollama.runners.torch_runner.main:main"
tollama-runner-timesfm = "tollama.runners.timesfm_runner.main:main"
tollama-runner-uni2ts = "tollama.runners.uni2ts_runner.main:main"
tollama-runner-sundial = "tollama.runners.sundial_runner.main:main"
tollama-runner-toto = "tollama.runners.toto_runner.main:main"
tollama-mcp = "tollama.mcp.__main__:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6.0",
]
mcp = [
  "mcp>=1.0",
  "httpx>=0.27.0,<1.0.0",
]
langchain = [
  "langchain-core>=0.2,<1.0",
]
metrics = [
  "prometheus-client>=0.20,<1.0",
]
notebooks = [
  "jupyter>=1.1,<2.0",
  "nbconvert>=7.16,<8.0",
  "matplotlib>=3.8,<4.0",
  "plotly>=5.22,<6.0",
]
ingest = [
  "pyarrow>=15.0,<20.0",
]
runner_torch = [
  "chronos-forecasting>=2.0",
  "granite-tsfm>=0.3.0,<0.4",
  "torch>=2.0",
  "pandas>=2.0,<3.0",
  "numpy>=1.26,<3.0",
]
runner_timesfm = [
  "numpy>=1.26,<3.0",
  "pandas>=2.0,<3.0",
  "huggingface_hub>=0.20,<1.0",
  "timesfm[torch] @ git+https://github.com/google-research/timesfm.git@2dcc66fbfe2155adba1af66aa4d564a0ee52f61e",
]
runner_uni2ts = [
  "uni2ts>=2.0.0",
  "numpy>=1.26,<3.0",
  "pandas>=2.0,<3.0",
  "huggingface_hub>=0.20,<1.0",
  "gluonts>=0.14.0,<0.16.0",
]
runner_sundial = [
  "transformers>=4.40.1,<5.0",
  "torch>=2.0",
  "numpy>=1.26,<3.0",
  "pandas>=2.0,<3.0",
  "huggingface_hub>=0.20,<1.0",
]
runner_toto = [
  "toto-ts>=0.1.4",
  "torch>=2.5",
  "numpy>=1.26,<3.0",
  "pandas>=2.0,<3.0",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
  "integration: marks tests requiring optional integration dependencies and network downloads",
]
