[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tollama"
version = "0.1.0"
description = "Local-first time series forecasting core for preprocessing, benchmarking, and routing models through one API, CLI, and SDK."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "tollama contributors" }]
keywords = ["forecasting", "time-series", "tsfm", "ollama", "fastapi"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "fastapi>=0.111.0,<1.0.0",
  "huggingface_hub>=0.20,<1.10.2",
  "httpx>=0.27.0,<1.0.0",
  "pandas>=2.0,<3.0",
  "pydantic>=2.0,<3.0",
  "python-multipart>=0.0.9,<1.0",
  "pyyaml>=6.0,<7.0",
  "tqdm>=4.60,<5.0",
  "typer>=0.12.0,<1.0.0",
  "uvicorn>=0.30.0,<1.0.0",
]

[project.urls]
Homepage = "https://github.com/yongchoelchoi/tollama"
Repository = "https://github.com/yongchoelchoi/tollama"
Issues = "https://github.com/yongchoelchoi/tollama/issues"
Documentation = "https://github.com/yongchoelchoi/tollama/blob/main/README.md"

[project.scripts]
tollama = "tollama.cli.main:main"
tollamad = "tollama.daemon.main:main"
tollama-runner-mock = "tollama.runners.mock.main:main"
tollama-runner-torch = "tollama.runners.torch_runner.main:main"
tollama-runner-timesfm = "tollama.runners.timesfm_runner.main:main"
tollama-runner-uni2ts = "tollama.runners.uni2ts_runner.main:main"
tollama-runner-sundial = "tollama.runners.sundial_runner.main:main"
tollama-runner-toto = "tollama.runners.toto_runner.main:main"
tollama-runner-lag-llama = "tollama.runners.lag_llama_runner.main:main"
tollama-runner-patchtst = "tollama.runners.patchtst_runner.main:main"
tollama-runner-tide = "tollama.runners.tide_runner.main:main"
tollama-runner-nhits = "tollama.runners.nhits_runner.main:main"
tollama-runner-nbeatsx = "tollama.runners.nbeatsx_runner.main:main"
tollama-runner-timer = "tollama.runners.timer_runner.main:main"
tollama-runner-timemixer = "tollama.runners.timemixer_runner.main:main"
tollama-runner-forecastpfn = "tollama.runners.forecastpfn_runner.main:main"
tollama-mcp = "tollama.mcp.__main__:main"
tollama-dashboard = "tollama.tui.app:main"

[project.optional-dependencies]
dev = [
  "bandit[toml]>=1.8",
  "hypothesis>=6.0",
  "mypy>=1.11",
  "mutmut>=2.4",
  "pip-audit>=2.7",
  "pre-commit>=3.7",
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "pytest-httpx>=0.30,<1.0",
  "ruff>=0.6.0",
]
mcp = [
  "mcp>=1.0",
  "httpx>=0.27.0,<1.0.0",
]
langchain = [
  "langchain-core>=0.2,<1.0",
]
metrics = [
  "prometheus-client>=0.20,<1.0",
]
notebooks = [
  "jupyter>=1.1,<2.0",
  "nbconvert>=7.16,<8.0",
  "matplotlib>=3.8,<4.0",
  "plotly>=5.22,<7.0",
]
ingest = [
  "pyarrow>=15.0,<20.0",
]
runner_torch = [
  "chronos-forecasting>=2.0",
  "granite-tsfm>=0.3.0,<0.4",
  "torch>=2.0",
  "pandas>=2.0,<3.0",
  "numpy>=1.26,<3.0",
]
runner_timesfm = [
  "numpy>=1.26,<3.0",
  "pandas>=2.0,<3.0",
  "huggingface_hub>=0.20,<1.10.2",
  "timesfm[torch,xreg] @ https://github.com/google-research/timesfm/archive/2dcc66fbfe2155adba1af66aa4d564a0ee52f61e.tar.gz",
]
runner_uni2ts = [
  "uni2ts>=2.0.0",
  "numpy>=1.26,<3.0",
  "pandas>=2.0,<3.0",
  "huggingface_hub>=0.20,<1.10.2",
  "gluonts>=0.14.0,<0.16.0",
]
runner_sundial = [
  "transformers>=4.40.1,<6.0",
  "torch>=2.0",
  "numpy>=1.26,<3.0",
  "pandas>=2.0,<3.0",
  "huggingface_hub>=0.20,<1.10.2",
]
runner_toto = [
  "toto-ts>=0.1.4",
  "torch>=2.5",
  "numpy>=1.26,<3.0",
  "pandas>=2.0,<3.0",
]
runner_lag_llama = [
  "lag-llama @ git+https://github.com/time-series-foundation-models/lag-llama.git",
  "gluonts>=0.14.0,<0.16.0",
  "lightning>=2.0,<2.2",
  "huggingface_hub>=0.20,<1.10.2",
  "numpy>=1.26,<3.0",
  "pandas>=2.0,<3.0",
  "wandb==0.25.0",
]
runner_patchtst = [
  "numpy>=1.26,<2.0",
  "torch>=2.2,<2.4",
  "transformers>=4.40.1,<4.48",
]
runner_tide = [
  "u8darts>=0.30.0",
  "pytorch-lightning>=2.0,<3.0",
  "torch>=2.0",
]
runner_nhits = [
  "neuralforecast>=1.7.0",
  "numpy>=1.26,<2.0",
  "pytorch-lightning>=2.0,<3.0",
  "scipy>=1.10,<2.0",
  "torch>=2.2",
]
runner_nbeatsx = [
  "neuralforecast>=1.7.0",
  "numpy>=1.26,<2.0",
  "pytorch-lightning>=2.0,<3.0",
  "scipy>=1.10,<2.0",
  "torch>=2.2",
]
runner_timer = [
  "transformers>=4.40.1,<6.0",
  "torch>=2.0",
  "numpy>=1.26,<3.0",
  "pandas>=2.0,<3.0",
  "huggingface_hub>=0.20,<1.10.2",
]
runner_timemixer = [
  "transformers>=4.40.1,<6.0",
  "torch>=2.0",
  "numpy>=1.26,<3.0",
  "pandas>=2.0,<3.0",
  "huggingface_hub>=0.20,<1.10.2",
]
runner_forecastpfn = [
]
preprocess = [
  "scipy>=1.11,<2.0",
  "numpy>=1.26,<3.0",
]
eval = [
  "tollama-eval>=0.2.0,<0.3.0",
]
tui = [
  "textual>=0.47,<9.0",
]
export = [
  "torch>=2.0",
  "onnx>=1.14,<2.0",
]
connectors_postgresql = [
  "psycopg2-binary>=2.9,<3.0",
]
connectors_influxdb = [
  "influxdb-client>=1.30,<2.0",
]
connectors_s3 = [
  "boto3>=1.28,<2.0",
]
connectors_kafka = [
  "kafka-python>=2.0,<3.0",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"tollama" = ["py.typed", "model_registry/*.yaml"]
"tollama.dashboard" = ["static/**/*"]
"tollama.tui" = ["styles/*.tcss"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]
asyncio_default_fixture_loop_scope = "function"
markers = [
  "gpu: marks tests that require GPU-backed runtimes",
  "integration: marks tests requiring optional integration dependencies and network downloads",
  "network: marks tests that require live network access",
  "slow: marks tests that take noticeably longer to run",
]

[tool.coverage.run]
branch = true
source = ["tollama"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 64

[tool.mypy]
python_version = "3.11"
files = [
  "src/tollama/core/protocol.py",
  "src/tollama/core/schemas.py",
  "src/tollama/connectors",
]
ignore_missing_imports = true
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = true

[tool.bandit]
exclude_dirs = ["tests"]
